tests/semantic_errors/sasha96_4.tl
-- test case 96.
-- Description : condition with wrong types. Condition cannot be a number

-- Expected : '4'
require "ifj21" 
function write_numbers(counter : string) 
   while #counter do                     
        write(counter, "
")           
    end                                  
end                                      

